tests/sksl/errors/ReservedNameSamplerCube.glsl
### Compilation failed:

error: 1: 'samplerCube' is a reserved word
1 error
